# qt_notes

notes/: .gitignore  CMakeLists.txt  deletion.cpp  helpers.cpp  setup.cpp
notes/medo/: about.cpp  about.h  appsetupmutex.cpp  appsetupmutex.h  config.cpp  config.h  dconfHotKey.cpp  dconfHotkey.h  feedback.cpp  feedback.h  hotkey.h  lifetimewatch.cpp  lifetimewatch.h  singleinstance.h  state.h  upgrade.h  winHotkey.h  xcbHotkey.h
notes/storage/: fileitem.cpp  fileitem.h
notes/test/Config/: CommentsOnly.cfg  CommentsWithValues.cfg  KeyWhitespace.Good.cfg  KeyWhitespace.cfg  Remove.Good.cfg  RemoveMulti.Good.cfg  RemoveMulti.cfg  Replace.Good.cfg  ReplaceOnlyLast.Good.cfg  ReplaceOnlyLast.cfg  SpacingCorrections.Good.cfg  SpacingCorrections.cfg  SpacingEscape.Good.cfg  SpacingEscape.cfg  SpacingPreserved.Good.cfg  SpacingPreserved.cfg  SpacingPreservedOnAdd.Good.cfg  SpacingPreservedOnAdd.cfg  WriteBasic.Good.cfg  WriteConvertedCpp.Good.cfg  WriteMulti.Good.cfg  WriteMulti.cfg  WriteNoEmptyLine.Good.cfg  WriteSameSeparatorEquals.Good.cfg  WriteSameSeparatorEquals.cfg  WriteSameSeparatorSpace.Good.cfg  WriteSameSeparatorSpace.cfg
notes/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
